[project]
name = "release-notes-generator"
version = "0.0.1"
description = "AI provider for release notes generation"
authors = [
    {name = "Writer, Inc.",email = "dev-feedback@writer.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
packages = [{include = "src/release_notes_generator"}]
dependencies = [
    "langchain (>=0.3.20,<0.4.0)",
    "langgraph (>=0.3.5,<0.4.0)",
    "langsmith (>=0.3.13,<0.4.0)",
    "langchain-writer (>=0.1.1,<0.2.0)",
    "langgraph-cli (>=0.1.75,<0.2.0)",
    "langgraph-api (>=0.0.28,<0.0.29)",
    "langchain-community (>=0.3.19,<0.4.0)"
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["release_notes_generator"]
[tool.setuptools.package-dir]
"release_notes_generator" = "src/release_notes_generator"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.71",
]
